@@ -7,6 +7,7 @@ import java.util.Random;
 
 import edu.colorado.phet.common.phetcommon.math.ImmutableVector2D;
 import edu.colorado.phet.common.phetcommon.math.MathUtil;
+import edu.colorado.phet.common.phetcommon.model.property.ObservableProperty;
 import edu.colorado.phet.common.phetcommon.model.property.Property;
 import edu.colorado.phet.sugarandsaltsolutions.intro.model.MacroSugar;
 
@@ -26,8 +27,8 @@ public class SugarDispenser extends Dispenser {
     private boolean translating = false;
     private ArrayList<ImmutableVector2D> positions = new ArrayList<ImmutableVector2D>();
 
-    public SugarDispenser( double x, double y, Beaker beaker ) {
-        super( x, y, 1.2, beaker );
+    public SugarDispenser( double x, double y, Beaker beaker, ObservableProperty<Boolean> moreAllowed ) {
+        super( x, y, 1.2, beaker, moreAllowed );
     }
 
     @Override public void translate( Dimension2D delta ) {
@@ -88,7 +89,7 @@ public class SugarDispenser extends Dispenser {
         angle.set( proposedAngle );
 
         //Check to see if we should be emitting sugar crystals-- if the sugar is enabled and its top is open and it is rotating
-        if ( enabled.get() && translating && angle.get() > Math.PI / 2 ) {
+        if ( enabled.get() && translating && angle.get() > Math.PI / 2 && moreAllowed.get() ) {
 
             //Then emit a number of crystals proportionate to the amount the dispenser was rotated so that vigorous rotation emits more, but clamping it so there can't be too many
             int numCrystals = (int) MathUtil.clamp( 1, (int) avgSpeed * 5, 5 );
