@@ -1,3 +1,5 @@
+Fixed: When a solute has 10 moles in the system, its dispenser shouldn't emit any more solute
+Merged IntroModel with SugarAndSaltSolutionModel
 Fixed: Water can overflow the beaker when solutes precipitate and you add water from the top faucet
 Fixed: Crystals don't dissolve at the true top of the water (accounting for solid precipitate displacement)
 Fixed: Solid precipitate should push up the water level, so that every mole of salt takes up 0.02699 L, and every mole of sugar takes up 0.2157 L
